fix(multiselect): wrap text on long items
closes #263

--- a/packages/default/scss/multiselect/_layout.scss
+++ b/packages/default/scss/multiselect/_layout.scss
@@ -40,6 +40,7 @@
             flex-direction: row;
             align-items: center;
             line-height: inherit;
+            white-space: normal;
 
             .k-select {
                 display: flex;
